# GeneJEPA

./: .gitignore  CHAT.md  CLAUDE.md  pyproject.toml  test.py
genejepa/: callbacks.py  configs.py  data_memmap.py  models.py  train.py  train_memmap.py
