[project]
name = "genejepa"
version = "0.1.0"
description = "A Predictive World Model of the Transcriptome"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.11.3",
    "archs4py>=1.0.2",
    "bionemo-scdl>=0.0.8",
    "cellxgene-census>=1.17.0",
    "datasets<2.20.0",
    "einops>=0.8.1",
    "ema-pytorch>=0.7.7",
    "fireducks>=1.2.5",
    "igraph>=0.11.9",
    "jupyterlab>=4.3.5",
    "leidenalg>=0.10.2",
    "lightning>=2.5.0.post0",
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.3",
    "numba>=0.57.0",
    "numpy>=1.24.0,<2.2.0",
    "pandas>=2.2.3",
    "pytdc-nextml==1.2.0",
    "pytest>=8.3.4",
    "scanpy>=1.11.0",
    "scib>=1.1.7",
    "scib-metrics>=0.5.0",
    "scikit-learn>=1.3.0",
    "scikit-misc>=0.5.1",
    "scvi-tools>=1.3.3",
    "seaborn>=0.13.2",
    "tabm>=0.0.1",
    "tdc>=0.1",
    "tiledbsoma>=1.17.1",
    "torch>=2.6.0",
    "tqdm>=4.66.0",
    "wandb>=0.19.8",
    "x-transformers==2.1.22",
    "xgboost>=3.0.2",
    "zarr>=2.16.0,<3.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
